# ysn-zamba

./: .gitignore  LICENSE  README.md  pyproject.toml  run_african_slowfast.sh  run_european.sh  run_setup.sh
models/config/: african-slowfast.yml  european.yml
ysn_zamba/: run.py
